# samp-log-core

./: .gitmodules  CMakeLists.txt
include/samplog/: ILogger.hpp  LogLevel.hpp  PluginLogger.hpp
src/: Api.cpp  CMakeLists.txt  FileChangeDetectorLinux.cpp  FileChangeDetectorWindows.cpp  LogConfig.cpp  LogConfig.hpp  LogManager.cpp  LogManager.hpp  LogRotationManager.cpp  Logger.cpp  Logger.hpp  crashhandler_unix.cpp  crashhandler_windows.cpp  utils.cpp  utils.hpp
